Added functionality to update a chart from c#. This introduces new register function. Fails when charts are on different pages currently.

--- a/samples/TestApplication/TestApplication.csproj
+++ b/samples/TestApplication/TestApplication.csproj
@@ -17,4 +17,16 @@
     <ProjectReference Include="..\..\src\BlazorComponents\BlazorComponents.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Pages\LineChart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\LineChart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\LineChart.cshtml" />
+  </ItemGroup>
+
 </Project>
