--- a/src/BlazorComponents/BlazorComponents.csproj
+++ b/src/BlazorComponents/BlazorComponents.csproj
@@ -6,7 +6,8 @@
   
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>0.1</VersionPrefix>
+    <LangVersion>7.3</LangVersion>
+    <VersionPrefix>0.2</VersionPrefix>
     <VersionSuffix>alpha-$(PoorMansBuildNumber)</VersionSuffix>
     <Title>BlazorComponents</Title>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
@@ -22,19 +23,23 @@
 3. Update Line Charts
 
 Known Isues:
-1. Currently you need buttons to initilize the charts. Dependent on resolution of #495 in Blazor.</PackageReleaseNotes>
+1. Currently you need buttons to initilize the charts. Dependent on resolution of #495 in Blazor.
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="dist\**\*.js" LogicalName="blazor:js:%(RecursiveDir)%(Filename)%(Extension)" />
     <EmbeddedResource Include="dist\**\*.css" LogicalName="blazor:css:%(RecursiveDir)%(Filename)%(Extension)" />
     <EmbeddedResource Include="dist\**" Exclude="**\*.js;**\*.css" LogicalName="blazor:file:%(RecursiveDir)%(Filename)%(Extension)" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <BlazorGenerate Remove="Shared\ChartJsRadarChart.cshtml" />
   </ItemGroup>
 </Project>
