--- a/src/BlazorComponents/BlazorComponents.csproj
+++ b/src/BlazorComponents/BlazorComponents.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <PoorMansBuildNumber>$([System.DateTime]::Now.ToString(MMddHHmmss))</PoorMansBuildNumber>
@@ -6,31 +6,27 @@
   
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+    <OutputType>library</OutputType>
     <LangVersion>7.3</LangVersion>
     <VersionPrefix>0.2</VersionPrefix>
-    <VersionSuffix>alpha-$(PoorMansBuildNumber)</VersionSuffix>
+    <!--<VersionSuffix>alpha-$(PoorMansBuildNumber)</VersionSuffix>-->
     <Title>BlazorComponents</Title>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
     <Company />
     <Authors>Muqeet Khan</Authors>
     <Description>Library of useful components to be used within Blazor. Starting off with a simple ChartJS port to Blazor.</Description>
     <RepositoryUrl>https://github.com/muqeet-khan/BlazorComponents</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/muqeet-khan/BlazorComponents</PackageProjectUrl>
     <PackageTags>Blazor Components ChartJS</PackageTags>
-    <PackageReleaseNotes>This initial alpha release. The goal is to get the fundamentals of Blazor and associated JS interop working. 
-
-1. Support for Initializing Line Chart.
-2. Support for Initializing Bar Chart.
-3. Update Line Charts
-
-Known Isues:
-1. Currently you need buttons to initilize the charts. Dependent on resolution of #495 in Blazor.
-    </PackageReleaseNotes>
+    <PackageSummary>Library of useful components to be used within Blazor. Starting off with a simple ChartJS port to Blazor.</PackageSummary>
+    <PackageReleaseNotes>Updated to Blazor 0.4.0</PackageReleaseNotes>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,7 +35,7 @@ Known Isues:
     <EmbeddedResource Include="dist\**" Exclude="**\*.js;**\*.css" LogicalName="blazor:file:%(RecursiveDir)%(Filename)%(Extension)" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <BlazorGenerate Remove="Shared\ChartJsRadarChart.cshtml" />
-  </ItemGroup>
+  </ItemGroup>-->
 </Project>
