--- a/src/BlazorComponents/BlazorComponents.csproj
+++ b/src/BlazorComponents/BlazorComponents.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Shared\ChartJsPieChart.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Shared\ChartJsMixedChart.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
