--- a/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
+++ b/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
@@ -7,11 +7,13 @@
     <LangVersion>7.3</LangVersion>
     <AssemblyName>ChartJs.Blazor.Sample</AssemblyName>
     <RootNamespace>ChartJs.Blazor.Sample</RootNamespace>
+    <BlazorLinkOnBuild>False</BlazorLinkOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.5.1" />
   </ItemGroup>
 
