Added an About page

--- a/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
+++ b/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
@@ -28,6 +28,9 @@
     <Content Update="Pages\BarCharts\StackedBarChart.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Pages\About.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Pages\ScatterChart.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
