--- a/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
+++ b/samples/ChartJs.Blazor.Sample/ChartJs.Blazor.Sample.csproj
@@ -7,8 +7,19 @@
     <LangVersion>7.3</LangVersion>
     <AssemblyName>ChartJs.Blazor.Sample</AssemblyName>
     <RootNamespace>ChartJs.Blazor.Sample</RootNamespace>
-    <BlazorLinkOnBuild>False</BlazorLinkOnBuild>
   </PropertyGroup>
+
+
+  <ItemGroup>
+
+    <BlazorLinkerDescriptor Include="Linker.xml" />
+
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Content Include="Linker.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.6.0" />
