Increased version number

--- a/src/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/src/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -17,20 +17,21 @@
     <Authors>Marius Muntean</Authors>
     <Description>CharJs charts for Blazor.
 Supports: LineChart, BarChart, RadarCart, Doughnut- and Pie-Chart, BubbleChart, MixedChart; Polar Area Chart
-Chart Legend with custom handler for Legend Item generation and events.</Description>
+
+Chart Legend with custom handler for Item generation and events - Jvascript and .Net handlers supported.</Description>
     <RepositoryUrl>https://github.com/mariusmuntean/ChartJs.Blazor</RepositoryUrl>
     <PackageProjectUrl>https://github.com/mariusmuntean/ChartJs.Blazor</PackageProjectUrl>
     <PackageTags>ChartJS Blazor</PackageTags>
     <PackageSummary>Library of useful components to be used within Blazor. Starting off with a simple ChartJS port to Blazor.</PackageSummary>
-    <PackageReleaseNotes>1 Added support for Chart Legends with custom Js functions for handling onClick, onHover events for Legend Items.
+    <PackageReleaseNotes>1 Extended the support for Legent Item click and hover evnt handler.
 2 Check out the updated samples page. You can now interact with the chart dataset.</PackageReleaseNotes>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <AssemblyName>ChartJs.Blazor</AssemblyName>
     <RootNamespace>ChartJs.Blazor</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.5.0</Version>
-    <AssemblyVersion>0.5.0.0</AssemblyVersion>
-    <FileVersion>0.5.0.0</FileVersion>
+    <Version>0.6.0</Version>
+    <AssemblyVersion>0.6.0.0</AssemblyVersion>
+    <FileVersion>0.6.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
