--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/ChartJs.Blazor.Sample.Serverside.csproj
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/ChartJs.Blazor.Sample.Serverside.csproj
@@ -9,10 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Server" Version="3.0.0-preview3-19153-02" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview3-19153-02" />
+    <PackageReference Include="Sotsera.Blazor.Toaster" Version="0.9.0-preview-1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
+    <ProjectReference Include="..\..\Shared\ChartJs.Blazor.Sample.Shared\ChartJs.Blazor.Sample.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
