--- a/src/ChartJs.Blazor/ChartJs.Blazor.csproj
+++ b/src/ChartJs.Blazor/ChartJs.Blazor.csproj
@@ -13,17 +13,16 @@
     <!--<VersionSuffix>alpha-$(PoorMansBuildNumber)</VersionSuffix>-->
     <Title>ChartJs.Blazor</Title>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
-    <Company></Company>
-    <Authors>Lars Glud</Authors>
-    <Description>Based on Marius munteans work.
-
-CharJs charts for Blazor.
-Supports: LineChart, BarChart, RadarCart, Doughnut- and Pie-Chart, BubbleChart, MixedChart; Polar Area Chart
+    <Company>Marius Muntean</Company>
+    <Authors>Marius Muntean</Authors>
+    <Description>
+      CharJs charts for Blazor.
+      Supports: LineChart, BarChart, RadarCart, Doughnut- and Pie-Chart, BubbleChart, MixedChart; Polar Area Chart
 
       Chart Legend with custom handler for Item generation and events - Jvascript and .Net handlers supported.
-</Description>
-    <RepositoryUrl>https://github.com/larshg/ChartJs.Blazor</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/larshg/ChartJs.Blazor</PackageProjectUrl>
+    </Description>
+    <RepositoryUrl>https://github.com/mariusmuntean/ChartJs.Blazor</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/mariusmuntean/ChartJs.Blazor</PackageProjectUrl>
     <PackageTags>ChartJS Blazor ASP.Net Core</PackageTags>
     <PackageSummary>Library of useful components to be used within Blazor. Starting off with a simple ChartJS port to Blazor.</PackageSummary>
     <PackageReleaseNotes>Updated to Blazor 0.9.0-preview3-19154-02</PackageReleaseNotes>
@@ -35,7 +34,6 @@ Supports: LineChart, BarChart, RadarCart, Doughnut- and Pie-Chart, BubbleChart, 
     <FileVersion>0.9.0.0</FileVersion>
     <NeutralLanguage />
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageId>Larshg.ChartJs.Blazor</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
